--- a/style.css
+++ b/style.css
@@ -4,15 +4,17 @@
     font-display: swap;
 }
 
-
 :root {
     --white: #FAF2E7;
     --black: #000000;
 
     --qasbyne: "qasbyne";
 
-    --gutter: .7rem;
+    --gutter: 0.7rem;
     --column: 12;
+
+    --ease-in-out-quart: cubic-bezier(0.77,0,0.175,1);
+    --primary-transition: transform 0.5s var(--ease-in-out-quart);
 }
 
 * {
@@ -44,6 +46,7 @@ body {
         );
     background-position: left top;
     background-size: calc(100% + var(--gutter)) 100%;
+    z-index: 3
 }
 
 .overlay.active {
@@ -64,6 +67,7 @@ img {
     justify-content: space-between;
     padding: var(--gutter);
     background-color: #f3f3f3;
+    position: relative;
 }
 
 .header {
@@ -71,18 +75,17 @@ img {
     grid-template-columns: repeat(12, minmax(0, 1fr));
     gap: var(--gutter);    
     font-family: Arial, Helvetica, sans-serif;
+    overflow: hidden;
 }
 
 .header .header__name {
     overflow: hidden;
-    /* background-color: red; */
     grid-column: span 4 / span 4;
 }
 
 .header .header__name span {
     font-size: .7rem;
     line-height: 1.5;
-    /* background: red; */
 }
 
 .header .header__location {
@@ -117,8 +120,9 @@ img {
 
 .overflow__wrapper,
 .header__name--text {
-    transform: translateY(0%);
+    transform: translateY(100%);
     display: inline-block;
+    will-change: transform;
 }
 
 .header .header__location .header__location--place {
@@ -161,7 +165,7 @@ img {
     background-color: var(--black);
     transform: scaleX(0);
     transform-origin: right;
-    transition: transform .555s ease;
+    transition: var(--primary-transition);
 }
 
 .header .header__navigation .navigation__link:hover::before ,
@@ -173,27 +177,44 @@ img {
 
 
 .images {
-    position: relative;
-    width: 12vw;
-    aspect-ratio: 1/1.4;
-    margin: 2rem auto 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    display: inline-grid;
+    grid-template-columns: repeat(14, minmax(0, 1fr));
+    gap: 1rem;
+    padding: 0 .7rem;
+    margin-top: -1rem;
 }
 
 .images .images__item {
+    --y-percent: 0%;
+    aspect-ratio: 1/1.2;
+    will-change: transform;
+    overflow: hidden;
+}
+
+.images .images__item::before {
     position: absolute;
     top: 0;
     left: 0;
+    content: "";
     width: 100%;
     height: 100%;
+    background-color: #f3f3f3;
+    transform: translateY(var(--y-percent)) scale(1.1);
+    will-change: transform;
 }
 
 .images .images__item img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .container .container__heading {
-    /* background-color: aqua; */
     overflow: hidden;
 }
 
@@ -201,11 +222,11 @@ img {
     font-size: 16.10vw;
     text-transform: capitalize;
     text-wrap: nowrap;
-    /* background-color: red; */
     line-height: 0.8;
-    transform: translateY(15%);
+    transform: translateY(120%);
     display: inline-block;
     font-family: var(--qasbyne);
     font-weight: 100;
     padding-top: 1rem;
+    will-change: transform;
 }
