--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
         );
     background-position: left top;
     background-size: calc(100% + var(--gutter)) 100%;
-    z-index: 3
+    z-index: -1;
 }
 
 .overlay.active {
@@ -189,6 +189,10 @@ body {
     will-change: transform;
     position: relative;
 }
+
+/* .images .images__item:nth-last-child(8).center {
+    transform: translate(-50%, -50%)!important;
+} */
 
 .images .images__item::before {
     position: absolute;
