--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
         );
     background-position: left top;
     background-size: calc(100% + var(--gutter)) 100%;
-    z-index: -1;
+    z-index: -1;  /* Change to a positive value to see overlay. */
 }
 
 .overlay.active {
@@ -70,8 +70,7 @@ body {
     gap: var(--gutter);    
     font-family: Arial, Helvetica, sans-serif;
     overflow: hidden;
-    /* position: relative; */
-    /* z-index: 3; */
+    z-index: 3;
 }
 
 .header .header__name {
